--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -26,7 +26,7 @@
                     </td>
                     <td>{{ product.name }}</td>
                     <td>{{ item.quantity }}</td>
-                    <td><a href="{% url "cart:cart_remove" product.id%}">Remove</a></td>
+                    <td><a href="{% url "cart:cart_remove" product.id %}">Remove</a></td>
                     <td class="num">${{ item.price }}</td>
                     <td class="num">${{ item.total_price }}</td>
                 </tr>
@@ -41,5 +41,8 @@
     </table>
     <p class="text-right">
         <a href="{% url "product-list" %}" class="button light">Continue shopping</a>
+        <a href="{% url "order:order_create" %}" class="button">
+            Checkout
+        </a>
     </p>
 {% endblock %}
